--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <script>
       function openMedrokianWebsite() {
-        var medrokianWebsite = 'https://medrokian.github.io/website.html';
+        var medrokianWebsite = 'https://embed.gsrca.de/p/rF4e/HA4DOMZ/play.html?mode=chrome&s=961';
         var win = window.open('about:blank');
         win.document.body.style.margin = "0";
         win.document.body.style.height = "100vh";
